[package]
name = "sspanel-ssr-rust-backend"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust runtime backend for SSPanel Mod_Mu ShadowsocksR manyuser nodes."

[dependencies]
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time", "io-util"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# SSR codec crypto. RustCrypto crates, pure Rust (no OpenSSL), to keep the
# musl/static build simple. RC4 is hand-rolled (trivial + avoids an unmaintained
# crate); MD5/AES-128-CBC/HMAC come from RustCrypto.
md-5 = "0.10"
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
hmac = "0.12"
base64 = "0.22"
getrandom = "0.2"
# Detect-rule matching against decrypted upload payloads. Bytes API so we can
# match non-UTF8 traffic; RE2-style engine has no catastrophic backtracking.
regex = "1"

[dev-dependencies]
hex = "0.4"
# `#[tokio::test(start_paused = true)]` needs tokio's test-util feature. Scoped to
# dev so the release binary is unaffected (feature unification only at test time).
tokio = { version = "1", features = ["test-util"] }

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
codegen-units = 1
